0.3.0
 - Drop support for Python 2
 - Refactoring:
   - Moved each reconstruction algorithm to a separate file
   - Modified code to comply with PEP8
   - Moved documentation from source to docs directory
0.2.1
 - Do not include compiled docs in sdist
0.2.0
 - Updated docs and examples (#1)
 - Moved docs to readthedocs.io
0.1.9
 - No code changes
0.1.8
 - Added support for NumPy 1.10
0.1.7
 - Improved padding for backprojection
0.1.6
 - Removed a memory leak
 - Increase compatibility to jobmanager
 - Improved documentation
0.1.5
 - Fixed an example
 - Fixed bug in 3D reconstruction
0.1.4
 - Added 3D reconstruction methods
0.1.3
 - Switched to jobamanger package for tracking of progress
 - Adde fan-beam helper methods
0.1.2
 - Renamed callback functions
0.1.1
 - Mainly code cleanup
0.1.0
 - Initial GitHub commit